修正部分跑版問題。調整排版

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="top">
         <div class="sign-in2"><p> <img src="./image/svgexport-10.svg" alt="">&nbsp;登入</p></div>
-        <div style="float: right;line-height: 70px;">&nbsp;<img src="./image/svgexport-8.svg" alt="">&nbsp;<img src="./image/svgexport-9.svg" alt="">&nbsp;</div>
+        <div style="float: right;line-height: 70px;">&nbsp;<img src="./image/svgexport-8.svg"  style="cursor: pointer;">&nbsp;<img src="./image/svgexport-9.svg" style="cursor: pointer;">&nbsp;</div>
 
         <div id="logo">
             <img src="./image/line.svg">&nbsp;&nbsp;&nbsp;<a href="./index.html"> <img
@@ -33,8 +33,7 @@
 
 
     <div id="menu">
-        <p style="color: rgb(161, 161, 161);font-size: 14px; margin-left:35px ; font-weight: bolder;">YOUTUBE精選
-        </p>
+
 
         <a href="./index.html" style="color: white; text-decoration: none;"><div class="menu"> <img src="./image/svgexport-11.svg" alt=""> <span>&nbsp;首頁</span></div></a>
         <div class="menu"> <img src="./image/svgexport-12.svg" alt=""> &nbsp;探索</div>
@@ -56,7 +55,8 @@
 
         <p></p>
         <hr>
-
+        <p style="color: rgb(161, 161, 161);font-size: 14px; margin-left:35px ; font-weight: bolder;">YOUTUBE精選
+        </p>
         <div class="menu">
             <img id="img" class="style-scope yt-img-shadow" height="24" width="24" alt=""
                 src="https://yt3.ggpht.com/q7onzeWZwMPcm-diCL6IjvQog7DQjOF30N-a4-hRT76EiTdxHpsp5ZHJUA-zp7xXhdshbZLlgw=s88-c-k-c0x00ffffff-no-rj">
