--- a/misuc.html
+++ b/misuc.html
@@ -29,10 +29,14 @@
             height: 50px;
             background: rgb(26, 26, 26);
             border: 1px solid rgb(62, 62, 62);
+            border-left: none;
+            border-right:none ;
             text-align: center;
             overflow: hidden;
             position: fixed;
             top:0
+            
+            
 
         }
 
@@ -56,21 +60,22 @@
 
         #vidio {
             background: rgb(0, 0, 0);
-            margin: 5%;
+            margin: 1%;
             overflow: hidden;
         }
 
         .vidio {
-            width: 20%;
+            width: 24%;
             color: white;
             display: inline-block;
-            margin-right: 20px;
-            margin-bottom: 30px;
+            margin: 60px 10px 30px  0;
+            height: 40%;
+            vertical-align: top;
         }
 
         .vidio img {
             width: 100%;
-            height: 30%;
+            height: 40%;
         }
 
         .title {
